search/searxng.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: searxng
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      volumes:
        - name: config
          configMap:
            name: searxng-config
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:2022.08.01-7c9c1124
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              subPath: searxng-settings.yaml
              mountPath: /etc/searxng/settings.yml
            - name: config
              subPath: searxng-uwsgi.ini
              mountPath: /etc/searxng/uwsgi.ini
         #livenessProbe:
         #  httpGet:
         #    path: /
         #    port: http
         #  periodSeconds: 10
